# knowledger

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backup  NGINX_SETUP.md  README.md  docker-compose.yml  main.py  pyproject.toml  setup-ssl.sh
.github/workflows/: deploy.yml
nginx/: nginx.conf  nginx.conf.http
scripts/: backup.py  migrate_to_multitenancy.py  test_migration.py  update_web_ui_auth.py
src/: auth.py  bot_handler.py  bot_utils.py  core.py  database.py  database_backup.py  llm_service.py  logger.py  main.py  quiz.py  visualize.py  web_ui.py
static/: style.css
templates/: account.html  base.html  categories.html  category_detail.html  date_detail.html  dates.html  entities.html  entity_detail.html  error.html  graph.html  ibit_detail.html  ibits.html  index.html  landing.html  login.html  quiz.html  signup.html  source_detail.html
